Manufactoring/force-app/main/default/objects/mfg_Inventory__c/mfg_Inventory__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>