Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Available_Quantity__c</fullName>
    <formula>mfg_Quantity_On_Hand__c  -  mfg_Reserved_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>