Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>mfg_Batch_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>