Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Batches_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>mfg_Batches_Per_Day__c</fullName>
    <formula>IF(
    OR(
        ISBLANK( mfg_Cycle_Time_In_Minutes__c ),
        mfg_Cycle_Time_In_Minutes__c &lt;= 0,
        ISBLANK(VALUE( $Label.mfg_Production_Hours_Per_Day ))
    ),
    0,
    FLOOR(
        (VALUE($Label.mfg_Production_Hours_Per_Day) * 60)
        / mfg_Cycle_Time_In_Minutes__c 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows how many full production batches can be completed in a day based on available working hours and cycle time.
Partial batches are ignored and the value is shown as zero if required inputs are missing or invalid.</inlineHelpText>
    <label>Batches Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>