Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Daily_Demand_Units_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>mfg_Daily_Demand_Units_Per_Day__c</fullName>
    <formula>IF(
    OR(
        ISBLANK( mfg_Orders_In_Last_30_Days__c ),
        mfg_Orders_In_Last_30_Days__c &lt;= 0
    ),
    0,
    CEILING(mfg_Orders_In_Last_30_Days__c / 30)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates average daily customer demand based on orders received in the last 30 days.
Values are rounded up to ensure demand is never under-estimated for planning.</inlineHelpText>
    <label>Daily Demand (Units Per Day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>