Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Inventory_Below_Safety_Level__c.field-meta.xml
<CustomField>
    <fullName>mfg_Inventory_Below_Safety_Level__c</fullName>
    <formula>BLANKVALUE( mfg_Available_Quantity__c , 0)
&lt;=
BLANKVALUE( mfg_Reorder_Point_Units__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines whether Available current inventory is at or below the reorder threshold.
Blank inventory or reorder values are treated as zero for calculation consistency.</inlineHelpText>
    <label>Inventory Below Safety Level</label>
    <type>Checkbox</type>
</CustomField>