Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>mfg_Lead_Time_Days__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Specifies the planning buffer in days based on how frequently planning is executed.
Helps maintain enough inventory to last until the next daily planning and production cycle.</inlineHelpText>
    <label>Lead Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>