Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Orders_In_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>mfg_Orders_In_Last_30_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders (In Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>