Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>