Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>mfg_Quantity_On_Hand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>