Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Reorder_point_Units__c.field-meta.xml
<CustomField>
    <fullName>mfg_Reorder_point_Units__c</fullName>
    <formula>IF(
    OR(
        ISBLANK( mfg_Daily_Demand_Units_Per_Day__c ),
        mfg_Daily_Demand_Units_Per_Day__c &lt; 0,
        ISBLANK( mfg_Lead_Time_Days__c ),
        mfg_Lead_Time_Days__c &lt; 0,
        ISBLANK( mfg_Safety_Stock_Units__c ),
        mfg_Safety_Stock_Units__c &lt; 0
    ),
    0,
    CEILING(
        (mfg_Daily_Demand_Units_Per_Day__c * mfg_Lead_Time_Days__c )
        + mfg_Safety_Stock_Units__c 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the inventory threshold that triggers production in the daily planning model.
Determined by adding expected demand for the planning period to safety stock and rounding up to ensure sufficient inventory coverage.</inlineHelpText>
    <label>Reorder point (Units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>