Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Safety_Stock_Units__c.field-meta.xml
<CustomField>
    <fullName>mfg_Safety_Stock_Units__c</fullName>
    <formula>IF(
    OR(
        ISBLANK( mfg_Daily_Demand_Units_Per_Day__c ),
        mfg_Daily_Demand_Units_Per_Day__c &lt;= 0
    ),
    0,
    CEILING(mfg_Daily_Demand_Units_Per_Day__c * 0.20)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maintains additional inventory to absorb demand fluctuations and avoid stock-outs.
Rounds the value up to ensure the safety buffer is always adequate.</inlineHelpText>
    <label>Safety Stock (Units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>