Manufactoring/force-app/main/default/objects/mfg_Inventory__c/fields/mfg_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>mfg_Warehouse__c</fullName>
    <label>Warehouse</label>
    <referenceTo>mfg_Warehouse__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>