Manufactoring/force-app/main/default/objects/mfg_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Warehouse__c</columns>
    <columns>mfg_Quantity_On_Hand__c</columns>
    <columns>mfg_Reserved_Quantity__c</columns>
    <columns>mfg_Available_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>