Manufactoring/force-app/main/default/objects/mfg_Inventory__c/listViews/mfg_All_Inventories_Planning.listView-meta.xml
<ListView>
    <fullName>mfg_All_Inventories_Planning</fullName>
    <columns>NAME</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Warehouse__c</columns>
    <columns>mfg_Quantity_On_Hand__c</columns>
    <columns>mfg_Reserved_Quantity__c</columns>
    <columns>mfg_Available_Quantity__c</columns>
    <columns>mfg_Reorder_Point_Units__c</columns>
    <columns>mfg_Inventory_Below_Safety_Level__c</columns>
    <columns>mfg_Batch_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Inventories Planning</label>
</ListView>